--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,13 +1,22 @@
 body{
     background-color: black;
-    background: url("../images/gamebackground.jpg");
+    background: url("../images/dbzbackground1.jpg");
     background-position: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: "Nunito", sans-serif !important;
 }
 
 #homescreen {
-    color:goldenrod;
     text-align: center;
+    position:absolute;
+    text-align: center;
+    padding-top: 10%;
+    color: goldenrod;
 }
+ #card{
+     text-align: center;
+ }
 
 footer {
     position: absolute;
@@ -16,4 +25,9 @@ footer {
     left: 0;
     color: darkred;
     background-color: (0,0,0.76);
+}
+
+#game {
+    text-align: center;
+    margin-right: 30%;
 }
